Fixed tooltip alignment

--- a/css/style.css
+++ b/css/style.css
@@ -1413,7 +1413,8 @@ nav {
 .client-descr-box {
   display: none;
   bottom: 100%;
-  width: 260px;
+  left: -100px;
+  right: -100px;
   position: absolute;
   margin-bottom: 50px;
 }
